--- a/paper01/00P1_cae_ontology.tex
+++ b/paper01/00P1_cae_ontology.tex
@@ -110,53 +110,53 @@
 
 % Explicitly mark preprint status
 \begin{tcolorbox}[colback=gray!10, colframe=black!20, boxrule=0.3pt]
-  \textbf{Preprint Notice.}
-  This preprint has not undergone peer review.
-  It is shared to support community discussion, transparency research, and early technical evaluation.
+    \textbf{Preprint Notice.}
+    This preprint has not undergone peer review.
+    It is shared to support community discussion, transparency research, and early technical evaluation.
 \end{tcolorbox}
 
 \begin{abstract}
-  We present a categorical ontology of civic accountable entities (CAE)
-  intended as a foundational object universe for formal semantics of civic data systems.
-  CAE defines a strict, disjoint partition of entities according to their role in
-  exchanges, obligations, authority, and accountability, rather than
-  domain, sector, or function.
-  The ontology distinguishes six entity kinds:
-  Actors, Assets, Instruments, Events, Jurisdictions, and Observations.
-  These categories are designed to be invariant under representation,
-  stable over time, and sufficient to model long-term public investments,
-  regulatory regimes, financial flows, and outcome measurements across
-  domains such as procurement, health, environment, education, and infrastructure.
+    We present a categorical ontology of civic accountable entities (CAE)
+    intended as a foundational object universe for formal semantics of civic data systems.
+    CAE defines a strict, disjoint partition of entities according to their role in
+    exchanges, obligations, authority, and accountability, rather than
+    domain, sector, or function.
+    The ontology distinguishes six entity kinds:
+    Actors, Assets, Instruments, Events, Jurisdictions, and Observations.
+    These categories are designed to be invariant under representation,
+    stable over time, and sufficient to model long-term public investments,
+    regulatory regimes, financial flows, and outcome measurements across
+    domains such as procurement, health, environment, education, and infrastructure.
 
-  The ontology is explicitly exchange-driven:
-  entities are introduced only insofar as they participate in
-  obligations, authority relationships, or accountability-bearing events.
-  Roles, classifications, and sectoral labels are modeled as relations
-  or attributes rather than entity kinds, ensuring disjointness and
-  preventing ontological overlap.
-  Laws and regulations are treated as normative and regulatory instruments
-  that ground concrete events and outcomes without requiring exhaustive legal modeling.
+    The ontology is explicitly exchange-driven:
+    entities are introduced only insofar as they participate in
+    obligations, authority relationships, or accountability-bearing events.
+    Roles, classifications, and sectoral labels are modeled as relations
+    or attributes rather than entity kinds, ensuring disjointness and
+    preventing ontological overlap.
+    Laws and regulations are treated as normative and regulatory instruments
+    that ground concrete events and outcomes without requiring exhaustive legal modeling.
 
-  CAE is intended to serve as the object-level foundation for
-  subsequent category semantics of the Civic Exchange Protocol (CEP)
-  and Contextual Evidence and Explanations (CEE).
-  By separating ontological commitment from exchange semantics and
-  evidentiary reasoning, CAE enables interoperable, auditable, and
-  longitudinal analysis of public systems while remaining neutral
-  with respect to policy positions or causal claims.
-  This structure supports comparative analysis across jurisdictions and time,
-  making long-term public outcomes inspectable without
-  collapsing into advocacy or narrative-driven interpretation.
+    CAE is intended to serve as the object-level foundation for
+    subsequent category semantics of the Civic Exchange Protocol (CEP)
+    and Contextual Evidence and Explanations (CEE).
+    By separating ontological commitment from exchange semantics and
+    evidentiary reasoning, CAE enables interoperable, auditable, and
+    longitudinal analysis of public systems while remaining neutral
+    with respect to policy positions or causal claims.
+    This structure supports comparative analysis across jurisdictions and time,
+    making long-term public outcomes inspectable without
+    collapsing into advocacy or narrative-driven interpretation.
 \end{abstract}
 
 \begin{keywords}
-  Categorical ontology,
-  accountable entities,
-  civic data,
-  public accountability,
-  exchange semantics,
-  longitudinal outcomes,
-  formal semantics.
+    Categorical ontology,
+    accountable entities,
+    civic data,
+    public accountability,
+    exchange semantics,
+    longitudinal outcomes,
+    formal semantics.
 \end{keywords}
 
 \input{01_intro}       % Introduction and Motivation
@@ -171,9 +171,9 @@
 \appendix
 \clearpage
 
-\input{99_appendixB}   % Worked examples
-\input{99_appendixD}   % Diagrammatic intuition
-\input{99_appendixE}   % Glossary of CAE terms (not category theory)
+\input{99_appendixA}   % Worked examples
+\input{99_appendixB}   % Diagrammatic intuition
+\input{99_appendixC}   % Glossary of CAE terms (not category theory)
 
 \bibliographystyle{plainnat}
 \bibliography{bib_shared}
