--- a/paper01/99_appendixB.tex
+++ b/paper01/99_appendixB.tex
@@ -1,303 +1,208 @@
 % !TeX root = 00P1_cae_ontology.tex
 
 \clearpage
-\section*{Appendix B. Worked Examples}
-\addcontentsline{toc}{section}{Appendix B. Worked Examples}
+\section*{Appendix B. Diagrammatic Intuition}
+\addcontentsline{toc}{section}{Appendix B. Diagrammatic Intuition}
 
-This appendix provides concrete examples illustrating how CAE's six entity
-kinds and relationship constraints apply across different civic domains.
-The goal is to demonstrate that the ontology is sufficient for modeling
-diverse accountability scenarios without domain-specific extensions.
-
-The following examples use real-world entities purely for illustrative purposes.
-No evaluative, legal, or causal claims are implied beyond the structural relationships shown.
+This appendix provides informal diagrams for the entity kinds, relationships,
+and accountability chains introduced in the main text.
+The goal is to support intuition rather than to introduce new formal content.
 
 % ------------------------------------------------------------
-\subsection*{B.1 Chicago Procurement: Following Federal Funds to Local Contractors}
+\subsection*{B.1 Entity Kinds and Disjointness}
 % ------------------------------------------------------------
 
+Figure~\ref{fig:entity-kinds} depicts the six entity kinds as disjoint sets.
 
-\textbf{Scenario:}
-The Federal Highway Administration (FHWA) provides funding to the Illinois
-Department of Transportation (IDOT), which contracts with a construction
-company to repair Chicago infrastructure.
+\begin{figure}[ht]
+    \centering
+    \begin{tikzpicture}[
+            kind/.style={ellipse,draw,minimum width=2.5cm,minimum height=1.5cm,align=center},
+            node distance=1.2cm
+        ]
+        % Top row
+        \node[kind,fill=blue!10] (A) {Actors\\(A)};
+        \node[kind,fill=green!10,right=of A] (S) {Sites/Assets\\(S)};
+        \node[kind,fill=orange!10,right=of S] (I) {Instruments\\(I)};
 
-\textbf{CAE Representation:}
+        % Bottom row
+        \node[kind,fill=red!10,below=of A] (E) {Events\\(E)};
+        \node[kind,fill=purple!10,below=of S] (J) {Jurisdictions\\(J)};
+        \node[kind,fill=yellow!10,below=of I] (O) {Observations\\(O)};
+    \end{tikzpicture}
+    \caption{The six disjoint entity kinds in CAE. Each entity belongs to exactly
+        one kind, and kinds do not overlap.}
+    \label{fig:entity-kinds}
+\end{figure}
 
-\begin{mdframed}
-  \textbf{Actors (A):}
-  \begin{itemize}[nosep]
-    \item FHWA (federal agency)
-    \item IDOT (state agency)
-    \item ABC Construction Company (contractor)
-    \item City of Chicago (local government)
-  \end{itemize}
-
-  \textbf{Instruments (I):}
-  \begin{itemize}[nosep]
-    \item Federal Highway Act (normative instrument)
-    \item IDOT-FHWA Grant Agreement (programmatic instrument)
-    \item Construction Contract (programmatic instrument)
-  \end{itemize}
-
-  \textbf{Events (E):}
-  \begin{itemize}[nosep]
-    \item Payment from FHWA to IDOT (\$2.5M, 2024-03-15)
-    \item Payment from IDOT to ABC Construction (\$2.4M, 2024-04-01)
-    \item Project completion inspection (2024-11-20)
-  \end{itemize}
-
-  \textbf{Sites (S):}
-  \begin{itemize}[nosep]
-    \item Bridge on Interstate 90 (infrastructure site)
-  \end{itemize}
-
-  \textbf{Jurisdictions (J):}
-  \begin{itemize}[nosep]
-    \item United States (federal scope)
-    \item Illinois (state scope)
-    \item Chicago (municipal scope)
-  \end{itemize}
-
-  \textbf{Observations (O):}
-  \begin{itemize}[nosep]
-    \item Bridge safety rating (2025-01-10: "Good")
-    \item Project completion rate (100\%, within budget)
-  \end{itemize}
-\end{mdframed}
-
-\textbf{Key Relationships:}
-\begin{itemize}[nosep]
-  \item \emph{enacts}: Congress $\rightarrow$ Federal Highway Act
-  \item \emph{implements}: IDOT-FHWA Grant $\rightarrow$ Federal Highway Act
-  \item \emph{party-to}: FHWA $\rightarrow$ IDOT-FHWA Grant
-  \item \emph{party-to}: IDOT $\rightarrow$ IDOT-FHWA Grant
-  \item \emph{occurs-under}: Payment Event $\rightarrow$ IDOT-FHWA Grant
-  \item \emph{acts-on}: Inspection Event $\rightarrow$ I-90 Bridge
-  \item \emph{located-in}: I-90 Bridge $\rightarrow$ Chicago
-  \item \emph{measures}: Safety Rating $\rightarrow$ I-90 Bridge
-\end{itemize}
-
-\textbf{Note:} This example demonstrates selective inclusion.
-Many other federal programs, state agencies, and contractors exist but are not modeled
-unless they participate in accountability-bearing relationships relevant to
-this exchange.
 
 % ------------------------------------------------------------
-\subsection*{B.2 Public Health Program: Statute to Population Outcomes}
+\subsection*{B.2 Accountability Chain: Statute to Outcomes}
 % ------------------------------------------------------------
 
 
-\textbf{Scenario:}
-The Affordable Care Act (ACA) authorizes the Department of Health and Human
-Services (HHS) to expand Medicaid.
-States adopt the expansion, health insurance coverage increases, and population health outcomes improve over time.
+Figure~\ref{fig:accountability-chain} visualizes an accountability chain from
+a federal statute through regulatory implementation to observed outcomes.
 
-\textbf{CAE Representation:}
+\begin{figure}[ht]
+    \centering
+    \begin{tikzpicture}[
+            node distance=2.5cm,
+            actor/.style={rectangle,rounded corners,draw,fill=blue!10,minimum width=2.2cm,minimum height=0.9cm,align=center},
+            inst/.style={rectangle,rounded corners,draw,fill=orange!10,minimum width=2.2cm,minimum height=0.9cm,align=center},
+            event/.style={rectangle,rounded corners,draw,fill=red!10,minimum width=2.2cm,minimum height=0.9cm,align=center},
+            obs/.style={rectangle,rounded corners,draw,fill=yellow!10,minimum width=2.2cm,minimum height=0.9cm,align=center},
+            >=Latex
+        ]
+        % Top: Actors
+        \node[actor] (congress) {Congress\\(Actor)};
+        \node[actor,right=of congress] (agency) {Agency\\(Actor)};
 
-\begin{mdframed}
-  \textbf{Actors (A):}
-  \begin{itemize}[nosep]
-    \item U.S. Congress
-    \item HHS (federal agency)
-    \item California Department of Health Care Services (state agency)
-    \item Kaiser Permanente (health insurer)
-  \end{itemize}
+        % Middle: Instruments
+        \node[inst,below=1.5cm of congress] (statute) {Statute\\(Instrument)};
+        \node[inst,below=1.5cm of agency] (reg) {Regulation\\(Instrument)};
+        \node[inst,right=of reg] (permit) {Permit\\(Instrument)};
 
-  \textbf{Instruments (I):}
-  \begin{itemize}[nosep]
-    \item Affordable Care Act (normative instrument)
-    \item Medicaid Expansion Regulation (regulatory instrument)
-    \item California Medicaid Plan (programmatic instrument)
-  \end{itemize}
+        % Bottom: Events
+        \node[event,below=1.5cm of reg] (payment) {Payment\\(Event)};
+        \node[event,right=of payment] (inspection) {Inspection\\(Event)};
 
-  \textbf{Events (E):}
-  \begin{itemize}[nosep]
-    \item California adopts Medicaid expansion (2014-01-01)
-    \item Enrollment event (2014-03-15, 500,000 new enrollees)
-    \item Claims payments (ongoing, monthly)
-  \end{itemize}
+        % Outcomes
+        \node[obs,below=1.5cm of payment] (outcome) {Health Outcome\\(Observation)};
 
-  \textbf{Jurisdictions (J):}
-  \begin{itemize}[nosep]
-    \item United States
-    \item California
-  \end{itemize}
-
-  \textbf{Observations (O):}
-  \begin{itemize}[nosep]
-    \item Uninsured rate (2013: 17\%, 2020: 7\%)
-    \item Preventable hospitalizations (2013: 45 per 1000, 2020: 32 per 1000)
-    \item Life expectancy (measured at county level, longitudinal)
-  \end{itemize}
-\end{mdframed}
-
-\textbf{Temporal Structure:}
-Events occur at specific times (2014-01-01, 2014-03-15), while Observations
-track outcomes over years (2013-2020).
-The ACA (Instrument) remains an enduring entity throughout this period.
-
-\textbf{Accountability Chain:}
-Observations are connected to the ACA through shared Jurisdictions and temporal
-overlap, enabling analysis of health outcomes before and after expansion.
-CAE does not assert that the ACA caused the improvements, but it makes the
-structural connections explicit for hypothesis testing.
+        % Relationships
+        \draw[->] (congress) -- node[left,font=\small] {enacts} (statute);
+        \draw[->] (agency) -- node[right,font=\small] {issues} (reg);
+        \draw[->] (statute) -- node[above,font=\small] {implements} (reg);
+        \draw[->] (reg) -- node[above,font=\small] {authorizes} (permit);
+        \draw[->] (permit) -- node[left,font=\small] {occurs-under} (payment);
+        \draw[->] (permit) -- node[right,font=\small] {occurs-under} (inspection);
+        \draw[->] (payment) -- node[left,font=\small] {associated-with} (outcome);
+        \draw[->] (inspection) -- node[right,font=\small] {associated-with} (outcome);
+    \end{tikzpicture}
+    \caption{An accountability chain from normative instrument (statute) through
+        regulatory implementation to observed outcomes. Authority flows downward,
+        while Observations connect back to Events and Instruments.}
+    \label{fig:accountability-chain}
+\end{figure}
 
 % ------------------------------------------------------------
-\subsection*{B.3 Environmental Regulation: Permits and Emissions}
+\subsection*{B.3 Relationship Constraints by Entity Kind}
 % ------------------------------------------------------------
 
+Figure~\ref{fig:relationship-constraints} shows representative relationship
+types and the entity kinds they connect.
 
-\textbf{Scenario:}
-The Clean Air Act authorizes the EPA to regulate emissions.
-A state environmental agency issues a permit to a power plant.
-The plant submits emissions reports, and air quality is monitored.
+\begin{figure}[ht]
+    \centering
+    \begin{tikzpicture}[
+            node distance=3.5cm,
+            kind/.style={circle,draw,minimum size=1.4cm,align=center,font=\small},
+            >=Latex
+        ]
+        \node[kind,fill=blue!10] (A) {Actor\\(A)};
+        \node[kind,fill=orange!10,right=of A] (I) {Instrument\\(I)};
+        \node[kind,fill=red!10,below=of A] (E) {Event\\(E)};
+        \node[kind,fill=green!10,below=of I] (S) {Site\\(S)};
+        \node[kind,fill=purple!10,right=of I] (J) {Jurisdiction\\(J)};
 
-\textbf{CAE Representation:}
-
-\begin{mdframed}
-  \textbf{Actors (A):}
-  \begin{itemize}[nosep]
-    \item EPA (federal regulator)
-    \item Ohio EPA (state regulator)
-    \item FirstEnergy (power plant operator)
-  \end{itemize}
-
-  \textbf{Instruments (I):}
-  \begin{itemize}[nosep]
-    \item Clean Air Act (normative instrument)
-    \item Title V Operating Permit (regulatory instrument)
-  \end{itemize}
-
-  \textbf{Events (E):}
-  \begin{itemize}[nosep]
-    \item Permit issuance (2020-06-01)
-    \item Quarterly emissions report (2024-10-01)
-    \item Compliance inspection (2024-11-15)
-  \end{itemize}
-
-  \textbf{Sites (S):}
-  \begin{itemize}[nosep]
-    \item W.H. Sammis Power Plant (coal facility)
-  \end{itemize}
-
-  \textbf{Jurisdictions (J):}
-  \begin{itemize}[nosep]
-    \item United States
-    \item Ohio
-    \item Stratton Air Basin (regulatory region)
-  \end{itemize}
-
-  \textbf{Observations (O):}
-  \begin{itemize}[nosep]
-    \item \(O_{\mathrm{SO_2}}^{\mathrm{intensity}}(2024\text{Q3}) = 0.12 \;\text{lb/MMBtu}\)
-    \item \(O_{\mathrm{PM}_{2.5}}^{\mathrm{ambient}} = 8.5 \;\mu\text{g/m}^3\)
-  \end{itemize}
-\end{mdframed}
-
-\textbf{Jurisdictional Nesting:}
-The Stratton Air Basin (environmental jurisdiction) overlaps with Ohio
-(political jurisdiction).
-Both are represented as distinct Jurisdictions with explicit \emph{contains} relationships.
-
-\textbf{Actor-Site Distinction:}
-FirstEnergy (Actor) operates the Sammis Plant (Site).
-The permit constrains the Site's operations, while FirstEnergy bears the legal obligation to comply.
+        \draw[->] (A) -- node[above,font=\scriptsize] {enacts} (I);
+        \draw[->] (A) -- node[left,font=\scriptsize] {party-to} (I);
+        \draw[->] (I) -- node[right,font=\scriptsize] {occurs-under} (E);
+        \draw[->] (E) -- node[below,font=\scriptsize] {involves} (A);
+        \draw[->] (E) -- node[above,font=\scriptsize] {acts-on} (S);
+        \draw[->] (S) -- node[right,font=\scriptsize] {located-in} (J);
+        \draw[->] (I) -- node[above,font=\scriptsize] {applies-in} (J);
+    \end{tikzpicture}
+    \caption{Representative relationship types constrained by source and target
+        entity kinds. For example, \emph{enacts} requires Actor $\rightarrow$ Instrument.}
+    \label{fig:relationship-constraints}
+\end{figure}
 
 % ------------------------------------------------------------
-\subsection*{B.4 Infrastructure Investment: Long-Term Public Value}
+\subsection*{B.4 Role Emergence from Relationship Patterns}
 % ------------------------------------------------------------
 
+Figure~\ref{fig:role-patterns} illustrates how a university (single Actor)
+occupies multiple roles through different relationship patterns.
 
-\textbf{Scenario:}
-A state issues bonds to fund rural broadband infrastructure.
-Private ISPs are awarded contracts to build fiber networks.
-Over time, internet access and economic indicators improve.
+\begin{figure}[ht]
+    \centering
+    \begin{tikzpicture}[
+            node distance=2.8cm,
+            actor/.style={ellipse,draw,fill=blue!10,minimum width=2.2cm,minimum height=1.2cm,align=center},
+            other/.style={rectangle,rounded corners,draw,minimum width=2.0cm,minimum height=0.9cm,align=center},
+            >=Latex
+        ]
+        % Central actor
+        \node[actor] (U) {University\\(Actor)};
 
-\textbf{CAE Representation:}
+        % Related entities
+        \node[other,fill=orange!10,above left=1.8cm and 2.5cm of U] (grant) {NSF Grant\\(Instrument)};
+        \node[other,fill=green!10,above right=1.8cm and 2.5cm of U] (lab) {Lab\\(Site)};
+        \node[other,fill=red!10,below=of U] (inspection) {Inspection\\(Event)};
 
-\begin{mdframed}
-  \textbf{Actors (A):}
-  \begin{itemize}[nosep]
-    \item Minnesota Department of Employment and Economic Development (state agency)
-    \item Arvig Communications (ISP contractor)
-    \item Local counties (grant recipients)
-  \end{itemize}
-
-  \textbf{Instruments (I):}
-  \begin{itemize}[nosep]
-    \item Minnesota Broadband Development Act (normative instrument)
-    \item Bond authorization (programmatic instrument)
-    \item Construction grant (programmatic instrument)
-  \end{itemize}
-
-  \textbf{Events (E):}
-  \begin{itemize}[nosep]
-    \item Bond issuance (2018-03-01, \$100M)
-    \item Grant award (2018-06-01, \$5M to Arvig)
-    \item Network completion (2020-12-01)
-  \end{itemize}
-
-  \textbf{Sites (S):}
-  \begin{itemize}[nosep]
-    \item Fiber optic network (rural Minnesota)
-  \end{itemize}
-
-  \textbf{Jurisdictions (J):}
-  \begin{itemize}[nosep]
-    \item Minnesota
-    \item Clay County, Norman County (rural counties)
-  \end{itemize}
-
-  \textbf{Observations (O):}
-  \begin{itemize}[nosep]
-    \item Broadband access rate (2018: 45\%, 2023: 92\%)
-    \item Median household income (2018: \$52K, 2023: \$58K)
-    \item Remote work adoption (2019: 8\%, 2023: 24\%)
-  \end{itemize}
-\end{mdframed}
-
-\textbf{Longitudinal Analysis:}
-Observations span 5+ years, tracking outcomes well beyond the initial
-investment Events.
-This structure supports analysis of public value that
-accrues over decades, not just immediate financial returns.
-
-\textbf{Diffuse Benefits:}
-Unlike direct procurement (Example B.1), infrastructure benefits are diffuse
-and population-level.
-Observations capture these outcomes explicitly rather
-than inferring them from transaction Events.
+        % Relationships showing different roles
+        \draw[->] (grant) -- node[above left,font=\scriptsize,align=center] {party-to \\ (recipient)} (U);
+        \draw[->] (U) -- node[above right,font=\scriptsize,align=center] {operates \\ (operator)} (lab);
+        \draw[->] (inspection) -- node[right,font=\scriptsize,align=center] {subject-of \\ (regulated)} (U);
+    \end{tikzpicture}
+    \caption{A single Actor (university) occupies multiple roles (recipient,
+        operator, regulated entity) through different relationship patterns.
+        Roles emerge from structure, not from entity kind.}
+    \label{fig:role-patterns}
+\end{figure}
 
 % ------------------------------------------------------------
-\subsection*{B.5 Role Multiplicity: University as Multi-Role Actor}
+\subsection*{B.5 Temporal Structure: Enduring vs Time-Indexed Entities}
 % ------------------------------------------------------------
 
+Figure~\ref{fig:temporal-structure} contrasts enduring entities (Actors,
+Instruments, Sites, Jurisdictions) with time-indexed entities (Events, Observations).
 
-\textbf{Scenario:}
-A university receives federal research grants, operates regulated laboratories,
-employs faculty researchers, and reports compliance data.
+\begin{figure}[ht]
+    \centering
+    \begin{tikzpicture}[
+            enduring/.style={rectangle,rounded corners,draw,fill=gray!10,
+                    minimum width=2.8cm,minimum height=0.7cm,align=center},
+            temporal/.style={rectangle,draw,fill=red!10,
+                    minimum width=1.9cm,minimum height=0.7cm,align=center},
+            obs/.style={rectangle,draw,fill=yellow!10,
+                    minimum width=1.9cm,minimum height=0.7cm,align=center},
+        ]
 
-\textbf{CAE Representation:}
+        % Timeline
+        \draw[thick,->] (0,0) -- (10,0) node[right] {Time};
+        \foreach \x in {2,4,6,8} {
+                \draw (\x,0.12) -- (\x,-0.12);
+            }
+        \node at (2,-0.45) {\scriptsize 2020};
+        \node at (4,-0.45) {\scriptsize 2021};
+        \node at (6,-0.45) {\scriptsize 2022};
+        \node at (8,-0.45) {\scriptsize 2023};
 
-\begin{mdframed}
-  \textbf{Single Actor (A):}
-  \begin{itemize}[nosep]
-    \item University of Minnesota
-  \end{itemize}
+        % Enduring entity: Agency
+        \draw[thick] (1,4.6) -- (9,4.6);      % draw line first
+        \node[enduring] at (5,4.6) {Agency (Actor)};  % box on top
 
-  \textbf{Multiple Relationship Patterns:}
-  \begin{itemize}[nosep]
-    \item \emph{party-to}: University $\rightarrow$ NSF Grant (role: grant recipient)
-    \item \emph{operates}: University $\rightarrow$ Biosafety Lab (role: facility operator)
-    \item \emph{employs}: University $\rightarrow$ Researcher (role: employer)
-    \item \emph{subject-of}: Compliance Inspection $\rightarrow$ University (role: regulated entity)
-  \end{itemize}
-\end{mdframed}
+        % Enduring entity: Statute
+        \draw[thick] (1,3.4) -- (9,3.4);
+        \node[enduring] at (5,3.4) {Statute (Instrument)};
 
-\textbf{Role as Relationship Pattern:}
-The university is a single Actor.
-Its roles (recipient, operator, employer, regulated entity)
-emerge from its relational position with respect to
-Instruments, Sites, and Events.
-No reclassification is needed when roles change.
+        % Events
+        \draw[thick,fill=red] (3,0) circle (0.08);
+        \node[temporal] at (3,1.8) {\scriptsize Payment Event};
+
+        \draw[thick,fill=red] (6,0) circle (0.08);
+        \node[temporal] at (6,1.8) {\scriptsize Inspection Event};
+
+        % Observation
+        \draw[thick,fill=yellow] (7.5,0) circle (0.08);
+        \node[obs] at (7.5,0.9) {\scriptsize Observation};
+
+    \end{tikzpicture}
+    \caption{Temporal structure in CAE. Actors and Instruments are enduring
+        entities that persist over time. Events and Observations are time-indexed
+        occurrences.}
+    \label{fig:temporal-structure}
+\end{figure}
