--- a/paper01/99_appendixC.tex
+++ b/paper01/99_appendixC.tex
@@ -1,8 +1,8 @@
 % !TeX root = 00P1_cae_ontology.tex
 
 \clearpage
-\section*{Appendix E. Glossary of CAE Terms}
-\addcontentsline{toc}{section}{Appendix E. Glossary of CAE Terms}
+\section*{Appendix C. Glossary of CAE Terms}
+\addcontentsline{toc}{section}{Appendix C. Glossary of CAE Terms}
 
 This appendix provides definitions of key terms used throughout the paper
 to make CAE accessible to readers from public administration, civic technology,
